--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /PandoraConsole/.vs/PandoraConsole/FileContentIndex
+/PandoraConsole/Pandora.Access/obj/Debug/net6.0
