--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@
 
 /PandoraConsole/.vs/PandoraConsole/FileContentIndex
 /PandoraConsole/Pandora.Access/obj/Debug/net6.0
+/PandoraConsole/PandoraConsole/obj/Debug/net6.0
+/PandoraConsole/PandoraConsole/bin/Debug/net6.0
+/PandoraConsole/Pandora.Access/bin/Debug/net6.0
