after common review

--- a/PandoraConsole/PandoraSimEngine/PandoraSimEngine - Backup.csproj
+++ b/PandoraConsole/PandoraSimEngine/PandoraSimEngine - Backup.csproj
@@ -17,12 +17,13 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="Data\nøkkelinfo_200.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
     <None Update="produktliste.csv">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Data\" />
   </ItemGroup>
 
 </Project>
